pn-site/css/main.css
/* ... */
/* Arabic */
*[lang=ar] {
  font-family: "Noto Naskh Arabic", "Noto Sans Symbols 2", var(--bs-font-sans-serif);
  font-size: 24px;
}
*[lang=ar] span.ab {
  direction: rtl;
  padding-left: 0;
  padding-right: 2.5em;
  text-align: right;
}
*[lang=ar] div.apparatus {
  font-size: 16px;
  margin-left: 0;
}
*[lang=ar] span.linenumber {
  font-size: 16px;
  margin-top: .4em;
  right: 1em;
}


/* -------------- */
/* Icons          */
/* -------------- */

/* Use Bootstrap Icons (https://icons.getbootstrap.com/) */
/* without using the whole web font. The key is to copy each SVG */
/* we need, escape it and store it as a CSS variable, then use it */
/* as a mask so it inherits the text color. */

:root {
  --icon-chevron-left: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-chevron-left' viewBox='0 0 16 16'%3e%3cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0'/%3e%3c/svg%3e");

  --icon-edit: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='currentColor'%3e%3cpath d='M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z'/%3e%3cpath fill-rule='evenodd' d='M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z'/%3e%3c/svg%3e");

  --icon-file-code: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath d='M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5z'/%3E%3Cpath d='M8.646 6.646a.5.5 0 0 1 .708 0l2 2a.5.5 0 0 1 0 .708l-2 2a.5.5 0 0 1-.708-.708L10.293 9 8.646 7.354a.5.5 0 0 1 0-.708m-1.292 0a.5.5 0 0 0-.708 0l-2 2a.5.5 0 0 0 0 .708l2 2a.5.5 0 0 0 .708-.708L5.707 9l1.647-1.646a.5.5 0 0 0 0-.708'/%3E%3C/svg%3E");

  --icon-box-arrow-up-right: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5'/%3E%3Cpath fill-rule='evenodd' d='M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z'/%3E%3C/svg%3E");

  --icon-x-circle-fill: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-x-circle-fill' viewBox='0 0 16 16'%3E%3Cpath d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z'/%3E%3C/svg%3E");
}

.bi {
  display: inline-block;
  width: 1em;
  height: 1em;
  margin-right: 0.25em;
  vertical-align: -0.125em;
  background-color: currentColor;
  mask-size: contain !important;
  mask-repeat: no-repeat !important;
  mask-position: center !important;
}

.bi-chevron-left {
  mask: var(--icon-chevron-left);
}

.bi-edit {
  mask: var(--icon-edit);
}

.bi-xml {
  mask: var(--icon-file-code);
}

.bi-external-link {
  mask: var(--icon-box-arrow-up-right);
}

.bi-x-circle-fill {
  mask: var(--icon-x-circle-fill);
}


/* -------------- */
/* Page Specific  */
/* -------------- */

/* Author Browse Page */

body.author-browse .btn-outline-info.bg-white:hover {
  background-color: var(--bs-info) !important;
  color: #fff !important;
  border-color: var(--bs-info) !important;
}

body.author-browse .btn-outline-primary.bg-white:hover {
  background-color: var(--bs-primary) !important;
  color: #fff !important;
  border-color: var(--bs-primary) !important;
}

body.author-browse .accordion-button {
  font-size: 1.3rem !important;
  font-weight: 500 !important;
}

body.author-browse .btn-group-vertical>.btn,
body.author-browse .btn-group>.btn {
  width: 2.375rem;
  max-width: 2.375rem;
}

body.author-browse .btn-group .btn {
  border-radius: 0;
}

@media (min-width: 1200px) {
  body.author-browse .btn-group .btn:first-child {
    border-top-left-radius: var(--bs-border-radius);
    border-bottom-left-radius: var(--bs-border-radius);
  }

  body.author-browse .btn-group .btn:last-child {
    border-top-right-radius: var(--bs-border-radius);
    border-bottom-right-radius: var(--bs-border-radius);
  }
}

/* Collections Browse List */

.collections-list {
  column-width: 12.5rem;
  column-gap: 2rem;
  list-style: none;
  padding: 0;
  margin: 0;
}

.collections-list li {
  break-inside: avoid;
  margin-bottom: 0.5rem;
}


/* ------------------ */
/* Apparatus Display  */
/* ------------------ */

#edition {
  display: flex;
  flex-direction: row;
  gap: 2rem;
  align-items: flex-start;
  /* min-height: 100vh; */
  opacity: 0;
  transition: opacity 0.3s ease-in;
}

#edition.ready {
  opacity: 1;
}

/* Reorder text sections: edition first, translation second, history third, linked data last */
.text.row {
  display: flex;
  flex-wrap: wrap;
}

.transcription {
  order: 1;
  flex-basis: 100% !important;
  max-width: 100% !important;
}

.translations {
  order: 2;
  flex-basis: 100% !important;
  max-width: 100% !important;
  margin-top: 2rem;
}

#history-section {
  order: 3;
  flex-basis: 100% !important;
  max-width: 100% !important;
  margin-top: 2rem;
}

#ld {
  order: 4;
  flex-basis: 100% !important;
  max-width: 100% !important;
  margin-top: 2rem;
}

#bibliography {
  margin-top: 2em;
}

.translation.data {
  margin-top: 3em;
}

.edition-content {
  flex: 1;
  min-width: 0;
}
/* ... */

